horizontal scroll (still bug)

--- a/FrontEnd/internal-app/src/app/modules/recruitment/components/candidate/pages/list/list.component.css
+++ b/FrontEnd/internal-app/src/app/modules/recruitment/components/candidate/pages/list/list.component.css
@@ -70,6 +70,7 @@ div.candidate div.info {
 }
 .table-scroll {
   width: 100%;
+  min-width: 1366px;
   table-layout: fixed;
 }
 .table-scroll thead,
@@ -146,14 +147,15 @@ div.candidate div.info {
 }
 
 .table-scroll tbody {
-    height: -moz-calc(100vh - 210px);
-    height: -webkit-calc(100vh - 210px);
-    height: -o-calc(100vh - 210px);
-    height: calc(100vh - 210px);
+    height: -moz-calc(100vh - 187px);
+    height: -webkit-calc(100vh - 187px);
+    height: -o-calc(100vh - 187px);
+    height: calc(100vh - 187px);
     overflow-y: auto;
     overflow-x: hidden;
     position: absolute;
     width: 99%;
+    min-width: 1366px;
 }
 
 .table-scroll tbody::-webkit-scrollbar,
@@ -162,6 +164,7 @@ div.candidate div.info {
     -o-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     width: 3px;
+    height: 3px;
     background-color: #F5F5F5;
 }
 
@@ -176,13 +179,4 @@ div.candidate div.info {
 .table-scroll tbody::-webkit-scrollbar-thumb {
     width: 3px;
     background-color: #138496;
-}
-
-.table-horizontal-scroll {
-  /* width: -moz-calc(100vw - 210px);
-  width: -webkit-calc(100vw - 210px);
-  width: -o-calc(100vw - 210px);
-  width: calc(100vw - 210px); */
-  width: 500px;
-  overflow-x: auto;
 }
